--- a/compontents.html
+++ b/compontents.html
@@ -135,6 +135,45 @@
                 </div>
             </div>
 
+
+            <br />
+            <br />
+            <br />
+
+
+            <div class="figure-list">
+                <div class="item">
+                    <div class="img">
+                        <a href="">
+                            <img src="./assets/temp/102.png" alt="">
+                        </a>
+                    </div>
+                    <div class="wrapper">
+                        <div class="title">
+                            <a href="">资讯标题资讯标题标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题资讯标题</a>
+                        </div>
+                        <div class="sub">
+                            文旅资讯
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br />
+            <br />
+            <br />
+
+            <div class="message-list">
+                <div class="item">
+                    <div class="title">
+                        <strong>消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息内容消息 ...</strong>
+                    </div>
+                    <div class="sub">
+                        2020-5-6 20:10
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
