--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav">
                 <ul>
-                    <li><a href="#">首页</a></li>
+                    <li class="active"><a href="#">首页</a></li>
                     <li><a href="#">文旅资讯</a></li>
                     <li><a href="#">文旅活动</a></li>
                     <li><a href="#">场馆预订</a></li>
