--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
                 </ul>
             </div>
             <div class="bar">
-                <div class="item">
+                <div class="item item-search active">
                     <a href="#">
                         <i class="icon icon-search"></i>
                     </a>
+                    <div class="search-box">
+                        <input type="text" />
+                    </div>
                 </div>
                 <div class="item">
                     <a href="#">
