--- a/compontents.html
+++ b/compontents.html
@@ -161,6 +161,26 @@
 
             <br />
             <br />
+
+            <div class="figure-list">
+                <div class="item">
+                    <div class="img imgx200">
+                        <a href="">
+                            <img src="./assets/temp/102.png" alt="">
+                        </a>
+                    </div>
+                    <div class="wrapper">
+                        <div class="title">
+                            <a href="">活动标题活动标题活动标题活动标题活动标题活动标题活动标题活动标题活动标题</a>
+                        </div>
+                        <div class="sub">
+                            活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容活动内容
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br />
             <br />
 
             <div class="message-list">
