--- a/compontents.html
+++ b/compontents.html
@@ -20,6 +20,12 @@
             </div>
             <br />
             <br />
+
+            <div class="page-tabs-wrapper">
+                <div class="item active">全部</div>
+                <div class="item">未读</div>
+                <div class="item">已读</div>
+            </div>
             <br />
             <br />
             <br />
