--- a/compontents.html
+++ b/compontents.html
@@ -199,6 +199,118 @@
                     </div>
                 </div>
             </div>
+            
+            <br />
+            <br />
+
+            <div class="brand-index">
+                <div class="flex">
+                    <div class="item"><img src="./assets/brand-1.png" alt="" /></div>
+                    <div class="item">
+                        <a href="">
+                            <div class="font-title font-title-brand-index-1">阅读品牌</div>
+                            <div class="fixed-1">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <div class="fixed-2">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <img src="./assets/brand-2.png" alt="" />
+                        </a>
+                    </div>
+                    <div class="item"><img src="./assets/brand-3.png" alt="" /></div>
+                </div>
+                <div class="flex">
+                    <div class="item">
+                        <a href="">
+                            <div class="font-title font-title-brand-index-2">文博品牌</div>
+                            <div class="fixed-1">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <div class="fixed-2">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <img src="./assets/brand-4.png" alt="" />
+                        </a>
+                    </div>
+                    <div class="item"><img src="./assets/brand-5.png" alt="" /></div>
+                    <div class="item">
+                        <a href="">
+                            <div class="font-title font-title-brand-index-3">戏曲品牌</div>
+                            <div class="fixed-1">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <div class="fixed-2">
+                                <i class="icon icon-decorate-brand"></i>
+                            </div>
+                            <img src="./assets/brand-6.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <br />
+            <br />
+
+            <div class="brand-list clearfix">
+                <div class="item">
+                    <a href="">
+                        <img src="./assets/temp/501.png" alt="">
+                        <div class="title">
+                            品牌名称品牌名称品牌名称品牌名称品牌
+                        </div>
+                        <div class="shadow"></div>
+                    </a>
+                </div>
+            </div>
+
+            <br />
+            <br />
+            <div class="service-map-index">
+                <div class="service-map ">
+                    <div class="title">
+                        热门景点
+                    </div>
+                    <div class="list">
+                        <div class="item">
+                            <a href="">
+                                <div class="img"><img src="./assets/temp/101.png" alt=""></div>
+                                <div class="wrapper">
+                                    <div class="name">七星山森林公园</div>
+                                    <div class="sub">
+                                        地址：四川省宜宾市叙州区详细地址详细地址详细地址详细地址...
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="more">
+                        <a href="">查看所有景点</a>
+                    </div>
+                </div>
+                <div class="map-show">
+                    <img src="./assets/temp/map.png" alt="" class="temp">
+
+                    <!-- 坐标， 图层显示，后续套地图看能否用上 -->
+                    <img src="./assets/location.png" style="position: absolute; left: 80px; top: 300px;" alt="">
+                    <img src="./assets/location-active.png"  style="position: absolute; left: 300px; top: 200px;" alt="">
+                    <div class="layer"  style="position: absolute; left: 210px; top: 130px;">
+                        <a href="">
+                            <div class="img">
+                                <img src="./assets/temp/101.png" alt=""></div>
+                                    <div class="wrapper">
+                                        <div class="name">七星山森林公园</div>
+                                        <div class="sub">
+                                            3A景区 热门景点
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
 
         </div>
     </div>
