--- a/user/order-detail.html
+++ b/user/order-detail.html
@@ -14,7 +14,7 @@
         <div class="page-banner">
             <div class="static"></div>
         </div>
-        <div class="page-conainter page-conainter-inner">
+        <div class="page-container page-container-inner">
             <div class="user-md clearfix">
                 <div class="user-menu page-aside">
                     <div class="top">
