--- a/activity/index.html
+++ b/activity/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header header-index">
-        <div class="page-conainter">
+        <div class="page-container">
             <div class="logo">
                 <a href="#"><img src="../assets/logo.png" alt=""></a>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </div>
         
-        <div class="page-conainter">
+        <div class="page-container">
             <div class="search-catalogue-md">
                 <div class="item">
                     <div class="label">选择类型：</div>
