--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header header-index">
-        <div class="page-conainter">
+        <div class="page-container">
             <div class="logo">
                 <a href="#"><img src="./assets/logo.png" alt=""></a>
             </div>
@@ -52,7 +52,7 @@
             </div>
         </div>
         
-        <div class="page-conainter">
+        <div class="page-container">
             <div class="home-md">
                 <div class="clearfix home-row">
                     <div class="home-news-md pull-left">
