--- a/user/login.html
+++ b/user/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="page-conainter">
+        <div class="page-container">
             <div class="logo">
                 <a href="#"><img src="../assets/logo.png" alt=""></a>
             </div>
@@ -49,7 +49,7 @@
             </div>
         </div>
         
-        <div class="page-conainter page-conainter-inner">
+        <div class="page-container page-container-inner">
             <div class="login-md">
                 <div class="left">
                     <div class="tabs">
